<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/convert"
        android:title="Convert"
        app:showAsAction="never" />
    <item
        android:id="@+id/trivia"
        android:icon="@drawable/trivia"
        android:title="trivia"
        app:showAsAction="always" />
    <item
        android:id="@+id/plane"
        android:icon="@drawable/plane"
        android:title="plane"
        app:showAsAction="always" />
    <item
        android:id="@+id/bear"
        android:icon="@drawable/bear"
        android:title="bear"
        app:showAsAction="always" />
    <item
        android:id="@+id/deleteCurrency"
        android:title="@string/dCurrency"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/currency_about" />
    <item
        android:id="@+id/history"
        android:title="@string/currency_history"
        app:showAsAction="never" />
</menu>