<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/player_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player_name"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/score"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/score"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/category"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/player_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/category"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/delete_button"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/score"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/category"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25"
                android:textSize="12dp"/>

            <!-- Removed the FrameLayout as it seemed unrelated to the side-by-side requirements -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
