<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="318dp"
        android:layout_height="408dp"
        android:outlineAmbientShadowColor="@color/black"
        app:cardBackgroundColor="@color/PrimaryColor"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="179dp"
                android:layout_height="305dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="9dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/flightNumID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="-89dp"
                    tools:layout_editor_absoluteY="308dp" />

                <TextView
                    android:id="@+id/flightStatusID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/terminalNumID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/gateNumID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/delayNumID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/arrivalID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="117dp"
                android:layout_height="361dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flightDet"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/detFlightID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/flightNum"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/detStatus"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/statusString"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/terminalID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="terminalID"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/gateID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/gateNum"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/delayID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/delayTime"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/ArrivalAirport"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/arrivalAirport"
                    android:textSize="16dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>